tests/pass/LogicRightShiftAssign.java
package pass;

public class LogicRightShiftAssign {

	public int logicRightShiftAssign(int x, int y) {
		int t = x;
		t >>>= y;
		return t;
	}
}
