tests/fail/LogicRightShiftAssign.java
package fail;

public class LogicRightShiftAssign {
	
	public static void main(String[] args) {
		int t = 3;
		t >>>= "a";
	}	
}
